# ddb/api-types/src/generated/ddb.api.v2.serde.rs
@@ -2312,6 +2312,172 @@ impl<'de> serde::Deserialize<'de> for ComponentHealth {
         deserializer.deserialize_struct("ddb.api.v2.ComponentHealth", FIELDS, GeneratedVisitor)
     }
 }
+impl serde::Serialize for ConfigureDebuggerRequest {
+    #[allow(deprecated)]
+    fn serialize<S>(&self, serializer: S) -> std::result::Result<S::Ok, S::Error>
+    where
+        S: serde::Serializer,
+    {
+        use serde::ser::SerializeStruct;
+        let mut len = 0;
+        if self.context.is_some() {
+            len += 1;
+        }
+        if self.target.is_some() {
+            len += 1;
+        }
+        if self.preconditions.is_some() {
+            len += 1;
+        }
+        if self.setting.is_some() {
+            len += 1;
+        }
+        let mut struct_ser = serializer.serialize_struct("ddb.api.v2.ConfigureDebuggerRequest", len)?;
+        if let Some(v) = self.context.as_ref() {
+            struct_ser.serialize_field("context", v)?;
+        }
+        if let Some(v) = self.target.as_ref() {
+            struct_ser.serialize_field("target", v)?;
+        }
+        if let Some(v) = self.preconditions.as_ref() {
+            struct_ser.serialize_field("preconditions", v)?;
+        }
+        if let Some(v) = self.setting.as_ref() {
+            match v {
+                configure_debugger_request::Setting::EnablePrettyPrinting(v) => {
+                    struct_ser.serialize_field("enablePrettyPrinting", v)?;
+                }
+                configure_debugger_request::Setting::SourceMapping(v) => {
+                    struct_ser.serialize_field("sourceMapping", v)?;
+                }
+            }
+        }
+        struct_ser.end()
+    }
+}
+impl<'de> serde::Deserialize<'de> for ConfigureDebuggerRequest {
+    #[allow(deprecated)]
+    fn deserialize<D>(deserializer: D) -> std::result::Result<Self, D::Error>
+    where
+        D: serde::Deserializer<'de>,
+    {
+        const FIELDS: &[&str] = &[
+            "context",
+            "target",
+            "preconditions",
+            "enable_pretty_printing",
+            "enablePrettyPrinting",
+            "source_mapping",
+            "sourceMapping",
+        ];
+
+        #[allow(clippy::enum_variant_names)]
+        enum GeneratedField {
+            Context,
+            Target,
+            Preconditions,
+            EnablePrettyPrinting,
+            SourceMapping,
+            __SkipField__,
+        }
+        impl<'de> serde::Deserialize<'de> for GeneratedField {
+            fn deserialize<D>(deserializer: D) -> std::result::Result<GeneratedField, D::Error>
+            where
+                D: serde::Deserializer<'de>,
+            {
+                struct GeneratedVisitor;
+
+                impl serde::de::Visitor<'_> for GeneratedVisitor {
+                    type Value = GeneratedField;
+
+                    fn expecting(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
+                        write!(formatter, "expected one of: {:?}", &FIELDS)
+                    }
+
+                    #[allow(unused_variables)]
+                    fn visit_str<E>(self, value: &str) -> std::result::Result<GeneratedField, E>
+                    where
+                        E: serde::de::Error,
+                    {
+                        match value {
+                            "context" => Ok(GeneratedField::Context),
+                            "target" => Ok(GeneratedField::Target),
+                            "preconditions" => Ok(GeneratedField::Preconditions),
+                            "enablePrettyPrinting" | "enable_pretty_printing" => Ok(GeneratedField::EnablePrettyPrinting),
+                            "sourceMapping" | "source_mapping" => Ok(GeneratedField::SourceMapping),
+                            _ => Ok(GeneratedField::__SkipField__),
+                        }
+                    }
+                }
+                deserializer.deserialize_identifier(GeneratedVisitor)
+            }
+        }
+        struct GeneratedVisitor;
+        impl<'de> serde::de::Visitor<'de> for GeneratedVisitor {
+            type Value = ConfigureDebuggerRequest;
+
+            fn expecting(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
+                formatter.write_str("struct ddb.api.v2.ConfigureDebuggerRequest")
+            }
+
+            fn visit_map<V>(self, mut map_: V) -> std::result::Result<ConfigureDebuggerRequest, V::Error>
+                where
+                    V: serde::de::MapAccess<'de>,
+            {
+                let mut context__ = None;
+                let mut target__ = None;
+                let mut preconditions__ = None;
+                let mut setting__ = None;
+                while let Some(k) = map_.next_key()? {
+                    match k {
+                        GeneratedField::Context => {
+                            if context__.is_some() {
+                                return Err(serde::de::Error::duplicate_field("context"));
+                            }
+                            context__ = map_.next_value()?;
+                        }
+                        GeneratedField::Target => {
+                            if target__.is_some() {
+                                return Err(serde::de::Error::duplicate_field("target"));
+                            }
+                            target__ = map_.next_value()?;
+                        }
+                        GeneratedField::Preconditions => {
+                            if preconditions__.is_some() {
+                                return Err(serde::de::Error::duplicate_field("preconditions"));
+                            }
+                            preconditions__ = map_.next_value()?;
+                        }
+                        GeneratedField::EnablePrettyPrinting => {
+                            if setting__.is_some() {
+                                return Err(serde::de::Error::duplicate_field("enablePrettyPrinting"));
+                            }
+                            setting__ = map_.next_value::<::std::option::Option<_>>()?.map(configure_debugger_request::Setting::EnablePrettyPrinting)
+;
+                        }
+                        GeneratedField::SourceMapping => {
+                            if setting__.is_some() {
+                                return Err(serde::de::Error::duplicate_field("sourceMapping"));
+                            }
+                            setting__ = map_.next_value::<::std::option::Option<_>>()?.map(configure_debugger_request::Setting::SourceMapping)
+;
+                        }
+                        GeneratedField::__SkipField__ => {
+                            let _ = map_.next_value::<serde::de::IgnoredAny>()?;
+                        }
+                    }
+                }
+                Ok(ConfigureDebuggerRequest {
+                    context: context__,
+                    target: target__,
+                    preconditions: preconditions__,
+                    setting: setting__,
+                })
+            }
+        }
+        deserializer.deserialize_struct("ddb.api.v2.ConfigureDebuggerRequest", FIELDS, GeneratedVisitor)
+    }
+}
 impl serde::Serialize for CreateBreakpointRequest {
     #[allow(deprecated)]
     fn serialize<S>(&self, serializer: S) -> std::result::Result<S::Ok, S::Error>
@@ -16270,6 +16436,7 @@ impl serde::Serialize for OperationKind {
             Self::ExtensionAction => "OPERATION_KIND_EXTENSION_ACTION",
             Self::Shutdown => "OPERATION_KIND_SHUTDOWN",
             Self::SetVariable => "OPERATION_KIND_SET_VARIABLE",
+            Self::ConfigureDebugger => "OPERATION_KIND_CONFIGURE_DEBUGGER",
         };
         serializer.serialize_str(variant)
     }
@@ -16293,6 +16460,7 @@ impl<'de> serde::Deserialize<'de> for OperationKind {
             "OPERATION_KIND_EXTENSION_ACTION",
             "OPERATION_KIND_SHUTDOWN",
             "OPERATION_KIND_SET_VARIABLE",
+            "OPERATION_KIND_CONFIGURE_DEBUGGER",
         ];
 
         struct GeneratedVisitor;
@@ -16345,6 +16513,7 @@ impl<'de> serde::Deserialize<'de> for OperationKind {
                     "OPERATION_KIND_EXTENSION_ACTION" => Ok(OperationKind::ExtensionAction),
                     "OPERATION_KIND_SHUTDOWN" => Ok(OperationKind::Shutdown),
                     "OPERATION_KIND_SET_VARIABLE" => Ok(OperationKind::SetVariable),
+                    "OPERATION_KIND_CONFIGURE_DEBUGGER" => Ok(OperationKind::ConfigureDebugger),
                     _ => Ok(OperationKind::default()),
                 }
             }
@@ -23292,6 +23461,118 @@ impl<'de> serde::Deserialize<'de> for SourceLocation {
             }
         }
         deserializer.deserialize_struct("ddb.api.v2.SourceLocation", FIELDS, GeneratedVisitor)
+    }
+}
+impl serde::Serialize for SourcePathMapping {
+    #[allow(deprecated)]
+    fn serialize<S>(&self, serializer: S) -> std::result::Result<S::Ok, S::Error>
+    where
+        S: serde::Serializer,
+    {
+        use serde::ser::SerializeStruct;
+        let mut len = 0;
+        if !self.from.is_empty() {
+            len += 1;
+        }
+        if !self.to.is_empty() {
+            len += 1;
+        }
+        let mut struct_ser = serializer.serialize_struct("ddb.api.v2.SourcePathMapping", len)?;
+        if !self.from.is_empty() {
+            struct_ser.serialize_field("from", &self.from)?;
+        }
+        if !self.to.is_empty() {
+            struct_ser.serialize_field("to", &self.to)?;
+        }
+        struct_ser.end()
+    }
+}
+impl<'de> serde::Deserialize<'de> for SourcePathMapping {
+    #[allow(deprecated)]
+    fn deserialize<D>(deserializer: D) -> std::result::Result<Self, D::Error>
+    where
+        D: serde::Deserializer<'de>,
+    {
+        const FIELDS: &[&str] = &[
+            "from",
+            "to",
+        ];
+
+        #[allow(clippy::enum_variant_names)]
+        enum GeneratedField {
+            From,
+            To,
+            __SkipField__,
+        }
+        impl<'de> serde::Deserialize<'de> for GeneratedField {
+            fn deserialize<D>(deserializer: D) -> std::result::Result<GeneratedField, D::Error>
+            where
+                D: serde::Deserializer<'de>,
+            {
+                struct GeneratedVisitor;
+
+                impl serde::de::Visitor<'_> for GeneratedVisitor {
+                    type Value = GeneratedField;
+
+                    fn expecting(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
+                        write!(formatter, "expected one of: {:?}", &FIELDS)
+                    }
+
+                    #[allow(unused_variables)]
+                    fn visit_str<E>(self, value: &str) -> std::result::Result<GeneratedField, E>
+                    where
+                        E: serde::de::Error,
+                    {
+                        match value {
+                            "from" => Ok(GeneratedField::From),
+                            "to" => Ok(GeneratedField::To),
+                            _ => Ok(GeneratedField::__SkipField__),
+                        }
+                    }
+                }
+                deserializer.deserialize_identifier(GeneratedVisitor)
+            }
+        }
+        struct GeneratedVisitor;
+        impl<'de> serde::de::Visitor<'de> for GeneratedVisitor {
+            type Value = SourcePathMapping;
+
+            fn expecting(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
+                formatter.write_str("struct ddb.api.v2.SourcePathMapping")
+            }
+
+            fn visit_map<V>(self, mut map_: V) -> std::result::Result<SourcePathMapping, V::Error>
+                where
+                    V: serde::de::MapAccess<'de>,
+            {
+                let mut from__ = None;
+                let mut to__ = None;
+                while let Some(k) = map_.next_key()? {
+                    match k {
+                        GeneratedField::From => {
+                            if from__.is_some() {
+                                return Err(serde::de::Error::duplicate_field("from"));
+                            }
+                            from__ = Some(map_.next_value()?);
+                        }
+                        GeneratedField::To => {
+                            if to__.is_some() {
+                                return Err(serde::de::Error::duplicate_field("to"));
+                            }
+                            to__ = Some(map_.next_value()?);
+                        }
+                        GeneratedField::__SkipField__ => {
+                            let _ = map_.next_value::<serde::de::IgnoredAny>()?;
+                        }
+                    }
+                }
+                Ok(SourcePathMapping {
+                    from: from__.unwrap_or_default(),
+                    to: to__.unwrap_or_default(),
+                })
+            }
+        }
+        deserializer.deserialize_struct("ddb.api.v2.SourcePathMapping", FIELDS, GeneratedVisitor)
     }
 }
 impl serde::Serialize for StateEvent {
